--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>3D Test file</title>
+    <title>3D Test File</title>
   </head>
   <body>
-    hiii
+
+    <h1>test
+  </h1>
     
   </body>
 </html>
